# pyspr

./: .analyze_test_head  .pre-commit-config.yaml  CLAUDE.md  README.md  check_version.py  expected_analyze_output.txt  pyproject.toml  pyright_final_status.md  pyright_typing_progress.md  pyright_typing_status.md  pyrightconfig.json  run_tests.sh  test_breakup_transitions.sh  test_gql.py  test_results.txt
.claude/: settings.json
.github/workflows/: ci.yml
pyspr/: __init__.py  typing.py  util.py
pyspr/cmd/spr/: main.py  main_with_mock.py
pyspr/config/: __init__.py  models.py
pyspr/config/config_parser/: __init__.py
pyspr/git/: __init__.py
pyspr/github/: __init__.py  adapters.py  types.py
pyspr/pretty/: __init__.py
pyspr/spr/: __init__.py
pyspr/tests/: __init__.py  test_git.py  test_no_rebase.py  utils.py
pyspr/tests/e2e/: README.md  __init__.py  conftest.py  decorators.py  fake_pygithub.py  fake_pygithub_test.py  fixtures.py  mock_github_module.py  mock_repo.py  mock_setup.py  test_amend.py  test_analyze.py  test_decorator_demo.py  test_e2e.py  test_fake_pygithub.py  test_helpers.py  test_no_rebase.py  test_reviewers.py  test_wip.py
scripts/: install-hooks.sh  pre-push  run-tests-for-push.sh  setup_claude_env.sh
