[project]
name = "pyspr"
version = "0.1.0"
description = "Stacked PR management tool - Python port of spr (minimal update command)"
authors = [
    { name = "Bot", email = "bot@users.noreply.github.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "pygithub>=2.5.0",
    "gitpython>=3.1.44",
    "click>=8.1.7",
    "pydantic>=2.9.2",
    "typing-extensions>=4.9.0",
    "tomli>=2.2.1",
    "pytest-xdist>=3.6.1",
    "debugpy>=1.8.12",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pyspr = "pyspr.cmd.spr.main:main"
git-spr = "pyspr.cmd.spr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pyright>=1.1.393",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyspr"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportUntypedFunctionDecorator = true
reportMissingTypeArgument = true

[tool.pyspr]
concurrency = 0 # Control degree of concurrency: 0/None=disabled, N=number of workers
